# autoware-guideline-check

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
dst/: main.js
src/: main.ts
src/autoware_guideline_check/: check_directory_structure.py  check_package_depends.py
src/autoware_guideline_check/utils/: __init__.py  entry_point.py  ros_package_xml.py
src/pre_commit_hooks/: check_package_depends.py
